--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                 <h2 class="heading">About <span>Me</span></h2>
                 <h3>Frontend Developer and Designer !</h3>
                 <p class="abt">
-                    I am an undergraduate in Electronics and Communication Engineering from Kongu Engineering College and I have secured an 8.35 CGPA. I have done projects on web development and Figma UI designs. I have developed a strong foundation in the domains of frontend development and UI/UX design. I am confident that my creativity and ability to learn quickly would make me a valuable asset to your team. Let me know if there are any available positions or upcoming opportunities that I might be a good fit for. I have attached my resume for your review. I look forward to hearing about opportunities from you soon.
-                </p>
+                    I am an undergraduate in Electronics and Communication Engineering from Kongu Engineering College and I have secured an 8.35 CGPA. I have done projects on web development and Figma UI designs. I have developed a strong foundation in the domains of frontend development and UI/UX design. </p>
                 <a href="https://drive.google.com/file/d/121SA0BcocQPumLv5jfUCm_MK53DRJKqn/view?usp=drive_link" target="_blank" class="btn">Know More about me</a>
             </div>
         </section>
