--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bx-calendar'></i>2020-2024</div>
-                            <h3>UG</h3>
+                            <h3>B.E - ECE </h3>
                             <p>Kongu Engineering College, Erode</p>
 
                         </div>
@@ -89,9 +89,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <!--Experience section-->
-            
+            </div>            
         </div>
         </section>
 
