--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="https://github.com/PraveenKumar017" target="_blank"><i class='bx bxl-github'></i></a>
                     <a href="https://twitter.com/Praveen19102002?t=hl1_xP7MvVwvqodekgEZVA&s=09" target="_blank"><i class='bx bxl-twitter' ></i></a>   
                 </div>
-                <a href="https://drive.google.com/file/d/1nJ5buvxhheKWuml5gxzA2_XySdQGlcyN/view?usp=sharing" target="_blank" class="btn">Download Resume</a>
+                <a href="https://drive.google.com/file/d/1iia-INlU0f7bxjWfDOwWaEeo4CwSbmhf/view?usp=sharing" target="_blank" class="btn">Download Resume</a>
             </div>
             <div class="home-img">
                 <img src="ph.png" alt="" target="_blank">
@@ -51,7 +51,7 @@
                 <p class="abt">
                     I am an undergraduate in Electronics and Communication Engineering from Kongu Engineering College and I have secured an 8.38 CGPA. I have done projects on web development and Figma UI designs. I have developed a strong foundation in the domains of frontend development and UI/UX design. 
                 </p>
-                <a href="https://drive.google.com/file/d/121SA0BcocQPumLv5jfUCm_MK53DRJKqn/view?usp=drive_link" target="_blank" class="btn">Know More about me</a>
+                <a href="https://drive.google.com/file/d/1iia-INlU0f7bxjWfDOwWaEeo4CwSbmhf/view?usp=sharing" target="_blank" class="btn">Know More about me</a>
             </div>
         </section>
                 
