--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="https://github.com/PraveenKumar017" target="_blank"><i class='bx bxl-github'></i></a>
                     <a href="https://twitter.com/Praveen19102002?t=hl1_xP7MvVwvqodekgEZVA&s=09" target="_blank"><i class='bx bxl-twitter' ></i></a>   
                 </div>
-                <a href="https://drive.google.com/file/d/1iia-INlU0f7bxjWfDOwWaEeo4CwSbmhf/view?usp=sharing" target="_blank" class="btn">Download Resume &nbsp;<i class="fa fa-download" style="font-size: 24px;"></i> </a>    
+                <a href="https://drive.google.com/file/d/16ttfN-MwWMlt-rptvQ3HarQzWdU6AArI/view?usp=drive_link" target="_blank" class="btn">Download Resume &nbsp;<i class="fa fa-download" style="font-size: 24px;"></i> </a>    
             </div>
             <div class="home-img">
                 <img src="ph.png" alt="" target="_blank">
@@ -45,16 +45,16 @@
         </section>
 
         <section class="about" id="about">
-            <div class="about-img">
+<!--             <div class="about-img">
                 <img src="ph.png" alt="" target="_blank">
-            </div>
+            </div> -->
             <div class="about-content">
                 <h2 class="heading">About <span>Me</span></h2>
                 <h3>Frontend Developer and Designer !</h3>
                 <p class="abt">
                     I am an undergraduate in Electronics and Communication Engineering from Kongu Engineering College and I have secured an 8.38 CGPA. I have done projects on web development and Figma UI designs. I have developed a strong foundation in the domains of frontend development and UI/UX design. 
                 </p>
-                <a href="https://drive.google.com/file/d/1iia-INlU0f7bxjWfDOwWaEeo4CwSbmhf/view?usp=sharing" target="_blank" class="btn">Know more about me &nbsp;<i class="fa fa-external-link" style="font-size: 20px;"></i></a>
+                <a href="https://drive.google.com/file/d/16ttfN-MwWMlt-rptvQ3HarQzWdU6AArI/view?usp=drive_link" target="_blank" class="btn">Know more about me &nbsp;<i class="fa fa-external-link" style="font-size: 20px;"></i></a>
             </div>
         </section>
                 
