--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2 class="heading">About <span>Me</span></h2>
                 <h3>Frontend Developer and Designer !</h3>
                 <p class="abt">
-                    I am an undergraduate in Electronics and Communication Engineering from Kongu Engineering College and I have secured an 8.38 CGPA. I have done projects on web development and Figma UI designs. I have developed a strong foundation in the domains of frontend development and UI/UX design. 
+                    I am an undergraduate in Electronics and Communication Engineering from Kongu Engineering College, and I have secured an 8.38 CGPA. I have one year of experience in the software engineering domain. While doing my job, I have learned Angular. I have done projects on web development and Figma UI designs. I have developed a strong foundation in the domains of UI/UX design and frontend development in the tech stack of Angular, HTML and CSS. 
                 </p>
                 <a href="https://drive.google.com/file/d/16ttfN-MwWMlt-rptvQ3HarQzWdU6AArI/view?usp=drive_link" target="_blank" class="btn">Know more about me &nbsp;<i class="fa fa-external-link" style="font-size: 20px;"></i></a>
             </div>
